versioned_docs/version-2.8/reference/subsystems/setup-py-generation.mdx
---
title: setup-py-generation
description: |
  Options to control how setup.py is generated from a `python_distribution` target.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options to control how setup.py is generated from a `python_distribution` target.

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[setup-py-generation]`</span>

<span className={styles.options}>

## Basic options

### `first_party_dependency_version_scheme`

<Option
  cli_repr={`--setup-py-generation-first-party-dependency-version-scheme=<FirstPartyDependencyVersionScheme>`}
  env_repr='PANTS_SETUP_PY_GENERATION_FIRST_PARTY_DEPENDENCY_VERSION_SCHEME'
  toml_repr={`[setup-py-generation]
first_party_dependency_version_scheme = <FirstPartyDependencyVersionScheme>`}
  one_of='exact, compatible, any'
  default_repr={`exact`}
>

What version to set in `install_requires` when a `python_distribution` depends on other `python_distribution`s. If `exact`, will use `==`. If `compatible`, will use `~=`. If `any`, will leave off the version. See https://www.python.org/dev/peps/pep-0440/#version-specifiers.

</Option>

### `generate_setup_default`

<Option
  cli_repr={`--[no-]setup-py-generation-generate-setup-default`}
  env_repr='PANTS_SETUP_PY_GENERATION_GENERATE_SETUP_DEFAULT'
  toml_repr={`[setup-py-generation]
generate_setup_default = <bool>`}
  default_repr={`True`}
>

The default value for the `generate_setup` field on `python_distribution` targets.Can be overridden per-target by setting that field explicitly. Set this to False if you mostly rely on handwritten setup files (setup.py, setup.cfg and similar). Leave as True if you mostly rely on Pants generating setup files for you.

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

None

</span>
